# indicator-messages

./: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in  indicator-messages.conf.in
data/icons/: Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/categories/: Makefile.in
data/icons/16x16/status/: Makefile.in
data/icons/22x22/: Makefile.in
data/icons/22x22/categories/: Makefile.in
data/icons/22x22/status/: Makefile.in
data/icons/24x24/: Makefile.in
data/icons/24x24/status/: Makefile.in
data/icons/32x32/: Makefile.in
data/icons/32x32/categories/: Makefile.in
data/icons/32x32/status/: Makefile.in
data/icons/48x48/: Makefile.in
data/icons/48x48/status/: Makefile.in
data/icons/scalable/: Makefile.in
data/icons/scalable/categories/: Makefile.in
data/icons/scalable/status/: Makefile.in
debian/: changelog  control  indicator-messages.install  libmessaging-menu-dev.install  libmessaging-menu0.install
libmessaging-menu/: Makefile.in  indicator-messages-service.c  indicator-messages-service.h  messaging-menu.c
src/: Makefile.am  Makefile.in  app-menu-item.c  dbus-data.h  ido-detail-label.c  ido-menu-item.c  im-app-menu-item.c  im-application-list.c  im-application-list.h  im-notifications.c  im-notifications.h  im-source-menu-item.c  indicator-messages.c  messages-service.c  seen-db.c
test/: Makefile.am  Makefile.in  test-service.cc
